--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,8 @@ body {
     --destructive-foreground: 60 9.1% 97.8%;
     --border: 12 6.5% 15.1%;
     --input: 12 6.5% 15.1%;
-    --ring: 35.5 91.7% 32.9%;
+    --ring: 47.9 95.8% 53.1%;
+    --ring2: 35.5 91.7% 32.9%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
